@@ -410,17 +410,20 @@ const CEnvelopeInfo	*	CMachine::m_Envelopes[4]=
 };
 
 extern "C" {
+#ifdef WIN32
 //__declspec(dllexport) CMachineInfo const * __cdecl GetInfo()
-CMachineInfo const * __attribute__((__cdecl__)) GetInfo(void)
-{
+CMachineInfo const * __attribute__((__cdecl__)) GetInfo(void) {
 	return &CMachine::m_MachineInfo;
 }
 
 //__declspec(dllexport) CMachineInterface * __cdecl CreateMachine()
-CMachineInterface * __attribute__((__cdecl__)) CreateMachine(void)
-{
+CMachineInterface * __attribute__((__cdecl__)) CreateMachine(void) {
 	return new CMachine;
 }
+#else
+CMachineInfo const *GetInfo(void) { return &CMachine::m_MachineInfo; }
+CMachineInterface *CreateMachine(void) { return new CMachine; }
+#endif
 }
 
 CMachine::CMachine()
